[metadata]
name=jclui
version=1.0.3
author=Joel Grayson
author_email=joel@joelgrayson.com
description=A command line user interface tool
long_description=file: README.md
long_description_content_type=text/markdown
url=https://github.com/JoelGrayson/jclui
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
# keywords=

[options]
packages=find:
python_requires= >=3.7
includes_package_data=True
